parser/src/lexer/snapshots/parser__lexer__lexer__tests__numeric-hexadecimal-21.snap
---
source: parser/src/lexer/lexer.rs
description: "0xF"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0xF",
        ),
        start: 0,
        end: 3,
    },
]
