parser/src/lexer/snapshots/parser__lexer__lexer__tests__numeric-hexadecimal-6.snap
---
source: parser/src/lexer/lexer.rs
description: "0x6"
---
[
    Token {
        kind: Hexadecimal,
        value: Number(
            "0x6",
        ),
        start: 0,
        end: 3,
    },
]
