parser/src/lexer/snapshots/parser__lexer__lexer__tests__numeric-octal-7.snap
---
source: parser/src/lexer/lexer.rs
---
[
    Token {
        kind: Octal,
        value: Number(
            "0o7",
        ),
        start: 0,
        end: 3,
    },
]
