parser/src/lexer/snapshots/parser__lexer__lexer__tests__raw-bytes-literals-5.snap
---
source: parser/src/lexer/lexer.rs
description: "rb\"\"\"hello\"\"\""
---
[
    Token {
        kind: RawBytes,
        value: Str(
            "rb\"\"\"hello\"\"\"",
        ),
        start: 0,
        end: 13,
    },
]
