parser/src/lexer/snapshots/parser__lexer__lexer__tests__raw-string-literals-0.snap
---
source: parser/src/lexer/lexer.rs
description: "r\"hello\""
---
[
    Token {
        kind: RawString,
        value: Str(
            "r\"hello\"",
        ),
        start: 0,
        end: 8,
    },
]
