parser/src/lexer/snapshots/parser__lexer__lexer__tests__raw-string-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "r\"\""
---
[
    Token {
        kind: RawString,
        value: Str(
            "r\"\"",
        ),
        start: 0,
        end: 3,
    },
]
